--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-	"name": "lcars",
-	"description": "LCARS UI through a browser",
-	"version": "0.0.1",
-	"private": true,
-	"engines": {
-		"node": "0.10.x",
-		"npm":  "1.2.x"
-	},
-	"dependencies": {
-		"express": "3.2.x",
-		"requireindex": "1.0.x"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/louh/lcars"
-	}
+    "name": "lcars",
+    "description": "LCARS UI through a browser",
+    "version": "0.0.1",
+    "private": true,
+    "engines": {
+        "node": "0.10.x",
+        "npm":  "1.2.x"
+    },
+    "dependencies": {
+        "express": "3.2.x",
+        "node-sass": "0.5.x",
+        "requireindex": "1.0.x"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/louh/lcars"
+    },
+    "scripts": {
+        "start": "node server.js"
+    }
 }
