--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-    "name": "lcars",
-    "description": "LCARS UI through a browser",
-    "version": "0.0.1",
-    "private": true,
-    "engines": {
-        "node": "0.10.x",
-        "npm":  "1.2.x"
-    },
-    "dependencies": {
-        "express": "3.2.x",
-        "node-sass": "0.5.x",
-        "requireindex": "1.0.x"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/louh/lcars"
-    },
-    "scripts": {
-        "start": "node server.js"
-    }
+  "name": "lcars",
+  "description": "LCARS UI through a browser",
+  "version": "0.0.2",
+  "private": true,
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.2.x"
+  },
+  "dependencies": {
+    "express": "~4.7.2",
+    "stylus": "~0.47.3",
+    "autoprefixer-stylus": "~0.2.0",
+    "jade": "~1.5.0",
+    "morgan": "~1.2.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/louh/lcars"
+  },
+  "scripts": {
+    "start": "node server.js"
+  }
 }
