--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "stylus": "~0.47.3",
     "autoprefixer-stylus": "~0.2.0",
     "jade": "~1.5.0",
-    "morgan": "~1.2.2"
+    "morgan": "~1.2.2",
+    "colors": "~0.6.2"
   },
   "repository": {
     "type": "git",
