--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "autoprefixer-stylus": "~0.2.0",
     "jade": "~1.5.0",
     "morgan": "~1.2.2",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "winston": "~0.7.3"
   },
   "repository": {
     "type": "git",
