--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "npm": "1.2.x"
   },
   "dependencies": {
-    "express": "~4.10.0",
-    "stylus": "~0.49.2",
     "autoprefixer-stylus": "~0.3.1",
+    "colors": "~1.0.3",
+    "express": "~4.10.0",
     "jade": "~1.7.0",
     "morgan": "~1.4.1",
-    "colors": "~1.0.3",
+    "node-env-file": "^0.1.4",
+    "requireindex": "^1.1.0",
+    "stylus": "~0.49.2",
     "winston": "~0.8.1"
   },
   "repository": {
@@ -21,6 +23,10 @@
     "url": "https://github.com/louh/lcars"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node bin/server"
+  },
+  "devDependencies": {
+    "chai": "*",
+    "mocha": "*"
   }
 }
